# hippodraw

./: .mailinglist  CMakeLists.txt  INSTALL  README
OpenGL/tests/: Makefile.am  test.py.in
OpenGL/tests/.svn/: all-wcprops  entries
OpenGL/tests/.svn/text-base/: Makefile.in.svn-base  hippoTestOpenGL.cxx.svn-base
cmt/: README  (+3 more)
doc/images/: Makefile.am  canvas_egret.eps  canvas_m51.eps  canvascreatentuple.eps  canvasfiledialog.eps  canvaswindow.eps  canvaswindowassistant.eps  canvaswindowcut.eps  canvaswindowdetail.eps  canvaswindowhelp.eps  canvaswindowrightmouse.eps  canvaswindowsettingsdialog.eps  custom_widget_designer.eps  custom_window.eps  dyhistogram.eps  hist_2.eps  hist_exp.eps  hist_root.eps  iguana.eps  insp_axis.eps  insp_cuts.eps  insp_plot.eps  insp_stats.eps  menu_edit.eps  menu_file.eps  menu_view.eps  pointHist.eps  profile2d.eps  scatterplot.eps  stripchart.eps  symbolpointrepsolidsquare.eps  widget_window.eps  xyplot.eps  xyzplot.eps  yplot.eps  zplot_contour.eps
doc/images/.svn/: all-wcprops  entries
doc/images/.svn/text-base/: Makefile.in.svn-base  canvas_egret.png.svn-base  canvas_m51.png.svn-base  canvasitemselected.eps.svn-base  canvaswindowassistant.png.svn-base  canvaswindowcut.png.svn-base  canvaswindowdetail.png.svn-base  canvaswindowsettings.eps.svn-base  canvaswindowsettings.png.svn-base  canvaswindowsettingsdialog.png.svn-base  circbuff_screen.png.svn-base  colorboxpointrep.eps.svn-base  colorboxpointrep.png.svn-base  colorplot.eps.svn-base  colorplot.png.svn-base  columnpointrep.eps.svn-base  columnpointrep.png.svn-base  contourplot.eps.svn-base  contourplot2.eps.svn-base  contourplot2.png.svn-base  file_browser.eps.svn-base  file_browser1.eps.svn-base  filledHist.eps.svn-base  filledHist.png.svn-base  hammer.gif.svn-base  hammer.png.svn-base  hist_resid.eps.svn-base  hist_root.png.svn-base  iguana.jpg.svn-base  insp_cuts.png.svn-base  insp_data.eps.svn-base  insp_functions.eps.svn-base  insp_plot.png.svn-base  insp_stats.png.svn-base  insp_transform.eps.svn-base  (+17 more)
examples/: Makefile.am  Makefile.in  Z0Strip.baddata2  cuts_complex.py  cuts_one_display.py  datareps.py  displays.py  fft.py  fitsWriting.py  fitting.py  fitting2.py  loglog.py  mainpage.py  merit.py  output.txt  simple_xyplot.py  svac_array.py  testErfc.tnt  transducer.tnt
examples/.svn/: all-wcprops  entries
examples/.svn/text-base/: EGRET_AllSky.fits.svn-base  EGRET_AllSky_car.fits.svn-base  README.svn-base  SimEvents.fits.svn-base  Z0Strip.baddata.svn-base  Z0Strip.data.svn-base  append_ntuple.py.svn-base  aptuple.tnt.svn-base  cut_multi_displays.py.svn-base  earth.fits.svn-base  fluxes.tnt.svn-base  function_ntuple.py.svn-base  load_hippo.py.svn-base  m51.fits.svn-base  run_examples.py.svn-base  set_hippo.csh.svn-base  static_vs_dynamic.py.svn-base
lib/: CMakeLists.txt
lib/.svn/: all-wcprops  entries
lib/.svn/text-base/: version.cxx.svn-base
python/: CMakeLists.txt  FitsAxis.py  FitsImageNTuple.py  FunctionBaseDecorator.py  FunctionWrap.cxx  ObserverWrap.cxx  ObserverWrap.h  PyApp.cxx  PyDataRep.cxx  PyDataRep.h  PyDataSource.cxx  PyFitsController.h  PyNTuple.h  QtCut.cxx  QtCut.h  QtDisplay.cxx  export_Canvas.cxx  export_CanvasWindow.cxx  export_CircularBuffer.cxx  export_DataSource.cxx  export_ListTuple.cxx  export_RepBase.cxx  export_SymbolType.cxx  fitsarray.py  hippofft.py  hippoplotter.py  spectral.py  utilities.py
python/.svn/: all-wcprops  entries
python/.svn/text-base/: FitsNTuple.py.svn-base  FunctionWrap.h.svn-base  ListTuple.cxx.svn-base  ListTuple.h.svn-base  PyApp.h.svn-base  PyCanvas.cxx.svn-base  PyCanvas.h.svn-base  PyDataSource.h.svn-base  PyFitsController.cxx.svn-base  PyFunctionRep.cxx.svn-base  PyFunctionRep.h.svn-base  PyNTuple.cxx.svn-base  PyNTupleController.cxx.svn-base  PyNTupleController.h.svn-base  QtDisplay.h.svn-base  exportToPython.cxx.svn-base  exportToPython.h.svn-base  export_Color.cxx.svn-base  export_CutController.cxx.svn-base  export_FCNBase.cxx.svn-base  export_FitsController.cxx.svn-base  export_FitsNTuple.cxx.svn-base  export_Fitter.cxx.svn-base  export_FitterFactory.cxx.svn-base  export_FunctionFactory.cxx.svn-base  export_LineStyle.cxx.svn-base  export_NTuple.cxx.svn-base  export_NTupleController.cxx.svn-base  export_NTupleFCN.cxx.svn-base  export_PointRepFactory.cxx.svn-base  export_QtCut.cxx.svn-base  export_RootController.cxx.svn-base  export_RootNTuple.cxx.svn-base  export_StatedFCN.cxx.svn-base  fileList.py.svn-base  hippomodule.cxx.svn-base  pyconversions.h.svn-base  python.dir.svn-base
qt/: AxisWidget.cxx  CMakeLists.txt  CanvasView.cxx  CanvasWindow.cxx  CreateNTuple.cxx  CreateNTuple.h  FigureEditor.cxx  HdThread.h  Inspector.cxx  Inspector.h  PickTable.cxx  PickTable.h  PlotTable.cxx  PlotTable.h  PlotTableEvent.cxx  PlotTableEvent.h  PlotterEvent.h  QtApp.h  QtFileDialog.h  QtFont.h  QtView.cxx  QtView.h  QtViewFactory.h  QtViewImp.cxx  QtViewWidget.cxx  SaveAsImageEvent.h  WindowController.cxx  WindowController.h  util.h
qt/.svn/: all-wcprops  entries
qt/.svn/text-base/: AxisWidget.h.svn-base  AxisWidgetPlugin.cxx.svn-base  AxisWidgetPlugin.h.svn-base  CanvasSelectionEvent.cxx.svn-base  CanvasSelectionEvent.h.svn-base  CanvasSettings.cxx.svn-base  CanvasSettings.h.svn-base  CanvasView.cxx.svn-base  CanvasView.h.svn-base  CanvasViewProxy.cxx.svn-base  CanvasViewProxy.h.svn-base  CanvasWindow.h.svn-base  DrawBorder.cxx.svn-base  DrawBorder.h.svn-base  FigureEditor.h.svn-base  FileOpenEvent.cxx.svn-base  FileOpenEvent.h.svn-base  HdThread.cxx.svn-base  ListDialog.cxx.svn-base  ListDialog.h.svn-base  PlotterEvent.cxx.svn-base  QtApp.cxx.svn-base  QtFileDialog.cxx.svn-base  QtFont.cxx.svn-base  QtGroupView.cxx.svn-base  QtGroupView.h.svn-base  QtView.cxx.svn-base  QtViewFactory.cxx.svn-base  QtViewImp.h.svn-base  QtViewWidget.h.svn-base  SaveAsImageEvent.cxx.svn-base  libqthippo.h.svn-base  util.cxx.svn-base
qt/app/: CMakeLists.txt  Info.plist
qt/app/.svn/: all-wcprops  entries
qt/examples/: QtViewWidgetWindow.ui  ilapp.cxx  testqtviewwidget.pro  teststatic.cc
qt/examples/.svn/: all-wcprops  entries
(+933 files in other folders)
