# 
# * Copyright (C)  2004, 2006  The Board of Trustees of  
# * The Leland Stanford Junior University.  All Rights Reserved.
#
# $Id: Makefile.am,v 1.5 2007/02/24 00:07:20 pfkeb Exp $
#
# Author: Paul_Kunz@slac.stanford.edu
#

# The following is set; otherwise, it would have to follow GNU
# conventions.
AUTOMAKE_OPTIONS = foreign

EXTRA_DIST =					\
	canvas_egret.eps			\
	canvas_m51.eps				\
	canvascreatentuple.eps			\
	canvasfiledialog.eps			\
	canvasitemselected.eps			\
	canvaswindow.eps			\
	canvaswindowcut.eps			\
	canvaswindowassistant.eps		\
	canvaswindowdetail.eps			\
	canvaswindowrightmouse.eps		\
	canvaswindowsettings.eps		\
	canvaswindowsettingsdialog.eps		\
	canvaswindowhelp.eps			\
	circbuff_screen.eps			\
	colorboxpointrep.eps			\
	colorplot.eps				\
	columnpointrep.eps			\
	contourplot.eps				\
	contourplot2.eps			\
	custom_widget_designer.eps		\
	custom_window.eps			\
	dyhistogram.eps				\
	file_browser.eps			\
	file_browser1.eps			\
	filledHist.eps				\
	hammer.eps				\
	hist_2.eps				\
	hist_exp.eps				\
	hist_resid.eps				\
	hist_root.eps				\
	iguana.eps				\
	insp_axis.eps				\
	insp_cuts.eps				\
	insp_data.eps				\
	insp_functions.eps			\
	insp_plot.eps				\
	insp_stats.eps				\
	insp_transform.eps			\
	menu_edit.eps				\
	menu_file.eps				\
	menu_view.eps				\
	onX.eps					\
	pick_table.eps				\
	pointHist.eps				\
	plot_table.eps				\
	profile2d.eps				\
	profile2dcontour.eps			\
	profilehist.eps				\
	scatterplot.eps				\
	stripchart.eps				\
	symbolpointrepsolidsquare.eps		\
	widget_window.eps			\
	xyplot.eps				\
	xyzplot.eps				\
	yplot.eps				\
	zplot.eps				\
	zplot_contour.eps			\
	canvas_egret.png			\
	canvas_m51.png				\
	canvascreatentuple.png			\
	canvasfiledialog.png			\
	canvasitemselected.png			\
	canvaswindow.png			\
	canvaswindowcut.png			\
	canvaswindowassistant.png		\
	canvaswindowdetail.png			\
	canvaswindowrightmouse.png		\
	canvaswindowsettings.png		\
	canvaswindowsettingsdialog.png		\
	canvaswindowhelp.png			\
	circbuff_screen.png			\
	colorboxpointrep.png			\
	colorplot.png				\
	columnpointrep.png			\
	contourplot.png				\
	contourplot2.png			\
	custom_widget_designer.png		\
	custom_window.png			\
	dyhistogram.png				\
	file_browser.png			\
	file_browser1.png			\
	filledHist.png				\
	hammer.gif				\
	hammer.png				\
	hist_2.png				\
	hist_exp.png				\
	hist_resid.png				\
	hist_root.png				\
	iguana.jpg				\
	insp_axis.png				\
	insp_cuts.png				\
	insp_data.png				\
	insp_functions.png			\
	insp_plot.png				\
	insp_stats.png				\
	insp_transform.png			\
	menu_edit.png				\
	menu_file.png				\
	menu_view.png				\
	onX.jpg					\
	pick_table.png				\
	pointHist.png				\
	plot_table.png				\
	profile2d.png				\
	profile2dcontour.png			\
	profilehist.png				\
	scatterplot.png				\
	stripchart.png				\
	symbolpointrepsolidsquare.png		\
	varmesh.png				\
	widget_window.png			\
	xyplot.png				\
	xyzplot.png				\
	yplot.png				\
	zplot.png				\
	zplot_contour.png
